kubernetes/backup-n8n-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"cert-manager.io/cluster-issuer":"letsencrypt-prod","nginx.ingress.kubernetes.io/backend-protocol":"HTTP","nginx.ingress.kubernetes.io/ssl-redirect":"true"},"name":"n8n-ingress","namespace":"n8n"},"spec":{"ingressClassName":"nginx","rules":[{"host":"n8n.southcentralus.cloudapp.azure.com","http":{"paths":[{"backend":{"service":{"name":"n8n","port":{"number":5678}}},"path":"/","pathType":"Prefix"}]}}],"tls":[{"h [...]
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/enable-websocket: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  creationTimestamp: "2025-05-29T15:05:36Z"
  generation: 2
  name: n8n-ingress
  namespace: n8n
  resourceVersion: "3097704"
  uid: e135d2b2-25b0-49b7-b351-c5d9542c5380
spec:
  ingressClassName: nginx
  rules:
  - host: n8n.southcentralus.cloudapp.azure.com
    http:
      paths:
      - backend:
          service:
            name: n8n
            port:
              number: 5678
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - n8n.southcentralus.cloudapp.azure.com
    secretName: n8n-tls
status:
  loadBalancer:
    ingress:
    - ip: 52.171.235.206
