kubernetes/n8n-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: n8n
  name: n8n
  namespace: n8n
spec:
  replicas: 1
  selector:
    matchLabels:
      service: n8n
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        service: n8n
    spec:
      initContainers:
        - name: volume-permissions
          image: busybox:1.36
          command: ["sh", "-c", "chown 1000:1000 /data"]
          volumeMounts:
            - name: n8n-claim0
              mountPath: /data
      containers:
        - command:
            - /bin/sh
          args:
            - -c
            - sleep 5; n8n start
          env:
            - name: DB_TYPE
              value: postgresdb
            - name: DB_POSTGRESDB_HOST
              value: postgres-service.n8n.svc.cluster.local
            - name: DB_POSTGRESDB_PORT
              value: "5432"
            - name: DB_POSTGRESDB_DATABASE
              value: n8n
            - name: DB_POSTGRESDB_DATABASE
              value: n8n
            - name: DB_POSTGRESDB_USER
              valueFrom:
                secretKeyRef:
                  name: postgres-secret
                  key: POSTGRES_NON_ROOT_USER
            - name: DB_POSTGRESDB_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: postgres-secret
                  key: POSTGRES_NON_ROOT_PASSWORD
            - name: N8N_PROTOCOL
              value: https
            - name: N8N_SECURE_COOKIE
              value: "false"
            - name: N8N_HOST
              value: n8n.southcentralus.cloudapp.azure.com
            - name: WEBHOOK_URL
              value: https://n8n.southcentralus.cloudapp.azure.com
            - name: N8N_METRICS
              value: "true" 
            - name: N8N_EDITOR_BASE_URL
              value: https://n8n.southcentralus.cloudapp.azure.com
            - name: N8N_TRUST_PROXY
              value: "true"
            - name: N8N_PROXY_HOPS
              value: "1" 
       
          image: dlrn8nacrdev.azurecr.io/n8n:stable
          name: n8n
          ports:
            - containerPort: 5678
          resources:
            requests:
              memory: "640Mi"
            limits:
              memory: "1Gi"
          volumeMounts:
            - mountPath: /home/node/.n8n
              name: n8n-claim0
      restartPolicy: Always
      volumes:
        - name: n8n-claim0
          persistentVolumeClaim:
            claimName: n8n-claim0
        - name: n8n-secret
          secret:
            secretName: n8n-secret
        - name: postgres-secret
          secret:
            secretName: postgres-secret
